done with stuff

--- a/STUDENT/classes/networkHomepage.html
+++ b/STUDENT/classes/networkHomepage.html
@@ -48,8 +48,15 @@
 
         <!-- syllabus -->
         <div>
-            <form class="syllabusFormCourses" name="syllabus" action="tools/networkSyllabus.pdf" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="Syllabi/networkSyllabus.pdf" method="get" accept-charset="utf-8">
                 <input class="syllabus" type="submit" value="Syllabus">
+            </form>
+        </div> 
+		
+		<!-- schedule -->
+		<div>
+            <form class="Schedule" name="schedule" action="schedule/mySchedule.html" method="get" accept-charset="utf-8">
+                <input class="schedule" type="submit" value="Schedule">
             </form>
         </div> 
 
