--- a/STUDENT/classes/softwareHomepage.html
+++ b/STUDENT/classes/softwareHomepage.html
@@ -48,10 +48,17 @@
 
         <!-- syllabus -->
         <div>
-            <form class="syllabusFormCourses" name="syllabus" action="tools/CIS320-SP2018.pdf" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="syllabi/CIS320-SP2018.pdf" method="get" accept-charset="utf-8">
                 <input class="syllabus" type="submit" value="Syllabus">
             </form>
-        </div> 
+        </div>
+
+<!-- schedule -->
+		<div>
+            <form class="Schedule" name="schedule" action="schedule/mySchedule.html" method="get" accept-charset="utf-8">
+                <input class="schedule" type="submit" value="Schedule">
+            </form>
+        </div> 		
 
         <hr>
     </body>
