--- a/STUDENT/classes/databaseHomepage.html
+++ b/STUDENT/classes/databaseHomepage.html
@@ -47,8 +47,15 @@
 
         <!-- syllabus -->
         <div>
-            <form class="syllabusFormCourses" name="syllabus" action="tools/databaseSyllabus.pdf" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="Syllabi/databaseSyllabus.pdf" method="get" accept-charset="utf-8">
                 <input class="syllabus" type="submit" value="Syllabus">
+            </form>
+        </div> 
+		
+		<!-- schedule -->
+		<div>
+            <form class="Schedule" name="schedule" action="schedule/mySchedule.html" method="get" accept-charset="utf-8">
+                <input class="schedule" type="submit" value="Schedule">
             </form>
         </div> 
 
