--- a/STUDENT/classes/schedule/mySchedule.html
+++ b/STUDENT/classes/schedule/mySchedule.html
@@ -16,7 +16,7 @@
     <head>
         <meta charset="utf-8">
         <title>Schedule</title>
-        <link rel="stylesheet" type="text/css" href="../style.css">
+        <link rel="stylesheet" type="text/css" href="../../../style.css">
     </head>
 
     <body>
@@ -30,10 +30,10 @@
         <div class="header-wrapper">
             <div class="headerClass">
                 <!-- ADIDALMS logo at top left -->
-                <img class="logo" src="../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
+                <img class="logo" src="../../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
                 <!-- logout button -->
-                <form class="logoutFormCourses" name="signOut" action="../index.html" method="get" accept-charset="utf-8">
+                <form class="logoutFormCourses" name="signOut" action="../../../index.html" method="get" accept-charset="utf-8">
                   <input class="logoutButtonCourses" type="submit" value="Logout">
                   <script language="javascript">DisableBackButton();</script>
                 </form>
