--- a/STUDENT/classes/databaseHomepage.html
+++ b/STUDENT/classes/databaseHomepage.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <script language="javascript">
+        <script>
             function DisableBackButton()
                 {
                     history.forward();
@@ -35,10 +35,10 @@
                 <!-- logout button -->
                 <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
                   <input class="logoutButtonCourses" type="submit" value="Logout">
-                  <script language="javascript">DisableBackButton();</script>
+                  <script>DisableBackButton();</script>
                 </form>
 
-                <input class="studentName" type="submit" value="Student 1"></input>
+                <input class="studentName" type="submit" value="Student 1">
 
                 <h1>Indiana Wesleyan University</h1>
                 <h2>Database Programming</h2>
