--- a/STUDENT/coursesHomepage.html
+++ b/STUDENT/coursesHomepage.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <script language="javascript">
+        <script>
             function DisableBackButton()
                 {
                     history.forward();
@@ -35,7 +35,7 @@
                 <!-- logout button -->
                 <form class="logoutFormCourses" name="signOut" action="../index.html" method="get" accept-charset="utf-8">
                   <input class="logoutButtonCourses" type="submit" value="Logout">
-                  <script language="javascript">DisableBackButton();</script>
+                  <script>DisableBackButton();</script>
                 </form>
 
                 <input class="studentName" type="submit" value="Student 1"></input>
