--- a/PROFESSOR/classes/databaseHomepage.html
+++ b/PROFESSOR/classes/databaseHomepage.html
@@ -27,11 +27,20 @@
             }
         </script>
 
+        <script>
+          function goBack() 
+          {
+            window.history.back();
+          }
+        </script>
+
         <div class="header-wrapper">
             <div class="headerClass">
                 <!-- ADIDALMS logo at top left -->
                 <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
+                <button onclick="goBack()">Back</button>
+                
                 <!-- logout button -->
                 <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
                   <input class="logoutButtonCourses" type="submit" value="Logout">
