--- a/PROFESSOR/classes/databaseHomepage.html
+++ b/PROFESSOR/classes/databaseHomepage.html
@@ -39,7 +39,10 @@
                 <!-- ADIDALMS logo at top left -->
                 <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
 
-                <button onclick="goBack()">Back</button>
+                <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
+                  <input class="backButtonCourses" type="submit" value="Back">
+                  <script>goBack();</script>
+                </form>
                 
                 <!-- logout button -->
                 <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
