--- a/PROFESSOR/classes/databaseHomepage.html
+++ b/PROFESSOR/classes/databaseHomepage.html
@@ -38,11 +38,6 @@
             <div class="headerClass">
                 <!-- ADIDALMS logo at top left -->
                 <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
-
-                <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
-                  <input class="backButtonCourses" type="submit" value="Back">
-                  <script>goBack();</script>
-                </form>
                 
                 <!-- logout button -->
                 <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
@@ -59,6 +54,12 @@
 
         <!-- syllabus -->
         <div>
+            <!-- back button -->
+            <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
+              <input class="backButtonCourses" type="submit" value="Back">
+              <script>goBack();</script>
+            </form>
+            
             <form class="syllabusFormCourses" name="syllabus" action="tools/databaseSyllabus.html" method="get" accept-charset="utf-8">
                 <input class="syllabus" type="submit" value="Syllabus">
             </form> 
