update script of back button

--- a/PROFESSOR/classes/databaseHomepage.html
+++ b/PROFESSOR/classes/databaseHomepage.html
@@ -55,9 +55,8 @@
         <!-- syllabus -->
         <div>
             <!-- back button -->
-            <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
+            <form class="backFormCourses" name="backButton" method="get" onclick="goBack()" accept-charset="utf-8">
               <input class="backButtonCourses" type="submit" value="Back">
-              <script>goBack();</script>
             </form>
             
             <form class="syllabusFormCourses" name="syllabus" action="tools/databaseSyllabus.html" method="get" accept-charset="utf-8">
