--- a/PROFESSOR/classes/databaseHomepage.html
+++ b/PROFESSOR/classes/databaseHomepage.html
@@ -40,9 +40,8 @@
                 <img class="logo" src="../../logo.png" alt="ADIDALMS Logo" height="90" width="100"/>
                 
                 <!-- logout button -->
-                <form class="logoutFormCourses" name="signOut" action="../../index.html" method="get" accept-charset="utf-8">
+                <form class="logoutFormCourses" name="signOut" action="../../index.html" onclick="DisableBackButton()" method="get" accept-charset="utf-8">
                   <input class="logoutButtonCourses" type="submit" value="Logout">
-                  <script>DisableBackButton();</script>
                 </form>
 
                 <input class="studentName" type="submit" value="Professor 1">
