--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   
-  <script language="javascript">
+  <script>
   
     function DisableBackButton()
       {
         history.forward();
       }
+      
   </script>
 
-  <body onload="DisableBackButton()">
+  <body onload="DisableBackButton">
   
     <!-- Scripting for username and password validation -->    
     <script>
