--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       
   </script>
 
-  <body onload="DisableBackButton">
+  <body onload="DisableBackButton()">
   
     <!-- Scripting for username and password validation -->    
     <script>
