Syllabus opens in New Window

--- a/STUDENT/classes/softwareHomepage.html
+++ b/STUDENT/classes/softwareHomepage.html
@@ -48,7 +48,7 @@
 
         <!-- syllabus -->
         <div>
-            <form class="syllabusFormCourses" name="syllabus" action="Syllabi/CIS320-SP2018.pdf" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="Syllabi/CIS320-SP2018.pdf" target="_blank" method="get" accept-charset="utf-8">
                 <input class="syllabus" type="submit" value="Syllabus">
             </form>
         </div>
