--- a/STUDENT/classes/databaseHomepage.html
+++ b/STUDENT/classes/databaseHomepage.html
@@ -47,7 +47,7 @@
 
         <!-- syllabus -->
         <div>
-            <form class="syllabusFormCourses" name="syllabus" action="Syllabi/databaseSyllabus.pdf" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="Syllabi/databaseSyllabus.pdf" method="get" target="_blank" accept-charset="utf-8">
                 <input class="syllabus" type="submit" value="Syllabus">
             </form>
         </div> 
