--- a/STUDENT/classes/literatureHomepage.html
+++ b/STUDENT/classes/literatureHomepage.html
@@ -48,7 +48,7 @@
 
         <!-- syllabus -->
         <div>
-            <form class="syllabusFormCourses" name="syllabus" action="Syllabi/literatureSyllabus.pdf" method="get" accept-charset="utf-8">
+            <form class="syllabusFormCourses" name="syllabus" action="Syllabi/literatureSyllabus.pdf" method="get" target="_blank" accept-charset="utf-8">
                 <input class="syllabus" type="submit" value="Syllabus">
             </form>
         </div> 
