--- a/STUDENT/coursesHomepage.html
+++ b/STUDENT/coursesHomepage.html
@@ -51,12 +51,46 @@
         <div class="coursesList">
             <h1>Students's Course List</h1>
             <ul>
-                <li><a class="classLinksCourses" href="classes/softwareHomepage.html">Intro to Software Engineering</li>
-                <li><a class="classLinksCourses" href="classes/accountingHomepage.html">Accounting Principles II</li>
-                <li><a class="classLinksCourses" href="classes/networkHomepage.html">Computer Network Fundamentals</li>
-                <li><a class="classLinksCourses" href="classes/databaseHomepage.html">Database Programming</li>
-                <li><a class="classLinksCourses" href="classes/literatureHomepage.html">Humanities World Literature</li>
+                <li><a class="classLinksCourses" href="classes/softwareHomepage.html">Intro to Software Engineering</a></li>
+                <li><a class="classLinksCourses" href="classes/accountingHomepage.html">Accounting Principles II</a></li>
+                <li><a class="classLinksCourses" href="classes/networkHomepage.html">Computer Network Fundamentals</a></li>
+                <li><a class="classLinksCourses" href="classes/literatureHomepage.html">Humanities World Literature</a></li>
+                <li><a class="classLinksCourses" href="classes/databaseHomepage.html">Database Programming</a></li>
             </ul>
         </div>
+
+        <div>
+            <div class="regBox">
+                <p>Registration</p>
+                <hr>
+                <p>Search: </p>
+                <input id="profUpdate" type="text" name="update" style="margin-left: 10px; height: 20px; width: 270px">
+                <br>
+                <div style="height:120px;width:300px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
+                    <a class="classLinksCourses" id="acc" onclick="acc()">Accounting Principles I</a> <br>
+                    <a class="classLinksCourses" id="int" >Intercultural Relationships</a>
+                    <br>
+                    <a class="classLinksCourses" id="civ">World Civilization</a>
+                     <br>
+                    <a class="classLinksCourses" id="mat">Contemporary Mathematics</a>
+                     <br>
+                    <a class="classLinksCourses" id="psy">General Psychology</a>
+                     <br>
+                    <a class="classLinksCourses" id="bus">Foundations of Business</a>
+                     <br>
+                </div>
+            </div>
+        </div>
+
+        <script>
+            function acc() {
+                var color = document.getElementById('acc').style.color;
+                if (color == "#cfebfd"){
+                    document.getElementById('acc').style.color = "#000000";
+                }
+                    document.getElementById('acc').style.color = "#cfebfd";
+                }  
+        </script>
+
     </body>
 </html>
