update to each file for back button

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         history.forward();
       }
       
+    window.onload = DisableBackButton;
+      
   </script>
 
-  <body onload="DisableBackButton()">
+  <body>
   
     <!-- Scripting for username and password validation -->    
     <script>
