back button function

--- a/PROFESSOR/classes/softwareHomepage.html
+++ b/PROFESSOR/classes/softwareHomepage.html
@@ -51,6 +51,7 @@
             <!-- back button -->
             <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
               <input class="backButtonCourses" type="submit" value="Back" onclick="goBack()">
+                <script goBack(); />
             </form>
             
             <form class="syllabusFormCourses" name="syllabus" action="tools/softwareSyllabus.html" method="get" accept-charset="utf-8">
