--- a/index.html
+++ b/index.html
@@ -22,15 +22,10 @@
   </head>
   
   <script>
-  
-    function DisableBackButton()
-      {
-        history.forward();
-      }
-      
-    window.onload = DisableBackButton;
-      
-  </script>
+      window.location.hash="no-back-button";
+      window.location.hash="Again-No-back-button";//again because google chrome don't insert first hash into history
+      window.onhashchange=function(){window.location.hash="no-back-button";}
+  </script> 
 
   <body>
   
