--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       window.location.hash="no-back-button";
       window.location.hash="Again-No-back-button";//again because google chrome don't insert first hash into history
       window.onhashchange=function(){window.location.hash="no-back-button";}
-  </script> 
+  </script>
+  
+  <script>
+      window.history.go(0);
+  </script>
 
   <body>
   
