fixed student back buttons

--- a/STUDENT/classes/softwareHomepage.html
+++ b/STUDENT/classes/softwareHomepage.html
@@ -51,7 +51,7 @@
         
             <!-- back button -->
             <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
-                <input class="backButtonCourses" type="submit" value="Back" onclick="goBack()">
+                <button class="backButtonCourses" type="submit" value="Back" onclick="goBack()">
             </form>
             
             <form class="syllabusFormCourses" name="syllabus" action="Syllabi/CIS320-SP2018.pdf" target="_blank" method="get" accept-charset="utf-8">
