--- a/STUDENT/classes/databaseHomepage.html
+++ b/STUDENT/classes/databaseHomepage.html
@@ -50,7 +50,7 @@
         
             <!-- back button -->
             <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
-                <input class="backButtonCourses" type="submit" value="Back" onclick="goBack()">
+                <button class="backButtonCourses" type="submit" value="Back" onclick="goBack()">
             </form>
             
             <form class="syllabusFormCourses" name="syllabus" action="Syllabi/databaseSyllabus.pdf" method="get" target="_blank" accept-charset="utf-8">
