--- a/STUDENT/classes/literatureHomepage.html
+++ b/STUDENT/classes/literatureHomepage.html
@@ -51,7 +51,7 @@
         
             <!-- back button -->
             <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
-                <input class="backButtonCourses" type="submit" value="Back" onclick="goBack()">
+                <button class="backButtonCourses" type="submit" value="Back" onclick="goBack()">
             </form>
             
             <form class="syllabusFormCourses" name="syllabus" action="Syllabi/literatureSyllabus.pdf" method="get" target="_blank" accept-charset="utf-8">
