--- a/PROFESSOR/classes/databaseHomepage.html
+++ b/PROFESSOR/classes/databaseHomepage.html
@@ -49,7 +49,7 @@
         <div>
             <!-- back button -->
             <form class="backFormCourses" name="backButton" method="get" accept-charset="utf-8">
-                <button class="backButtonCourses" type="submit" value="Back" onclick="goBack()">
+                <input class="backButtonCourses" type="button" value="Back" onclick="goBack()">
             </form>
             
             <form class="syllabusFormCourses" name="syllabus" action="tools/databaseSyllabus.html" method="get" accept-charset="utf-8">
