--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     function disableBack()
     {
         window.history.forward();
+        alert("Hello");
     }
+    
   </script>
     
   <body onload="disableBack()">
